--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Corona color plugin
 ===================
 
-Todo describe here
+Something I use when prototyping new ideas is to quickly get up and running using a nice color palette that is easy to manage. This plugin is one of the base plugins I use in all my new projects.
+
+
